--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
+    "uuid": "^10.0.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
